test/good/unbound-loop-1.expected.out
test/good/unbound-loop-1.tact:2:5:
  1 | fun test(): Int {
> 2 |     let a: Int = 20;
          ^
  3 |     while (a > 10) { // error: a is not changing within the loop
Read-only variable
Help: Consider creating a constant instead
See: https://nowarp.github.io/docs/misti/docs/detectors/ReadOnlyVariables
test/good/unbound-loop-1.tact:3:12:
  2 |     let a: Int = 20;
> 3 |     while (a > 10) { // error: a is not changing within the loop
                 ^
  4 |     }
Unbounded Loop: The condition variable doesn't change within the loop
Help: Consider changing the variable within the loop to ensure it terminates
See: https://nowarp.github.io/docs/misti/docs/detectors/UnboundLoops